# longshot-llm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
archive/: decoder.py  simple_v1.py  train.py
archive/test/: test_clusterbomb.py  test_clusterbomb_agent.py  test_formula_isodegrees.py  test_trajectory_processor.py
archive/v1/: buffer.py  env.py  game.py  randf.py  simple_v1.py  train.py  transformer_v2.py
archive/v3/: distribution.py  model.py
doc/: Makefile  conf.py  index.rst  library.md  longshot-api.md  map-elites.md  microservice-v2.md  microservice.md  rl-api.md
doc/reference/: index.rst  library.rst
longshot/: __init__.py
rl/: distrib.py  game.py  model.py  simple_v1.py  train.py  utils.py
script/: EXPORT_USAGE.md  avgq_distribution.py  cleanup_databases.py  demo_v2_system.py  download_trajectory_dataset.py  export_trajectories.py  generate_hypergraph.py  map_elites.py  map_elites_with_dataset.py  purge_warehouse.py  run_map_elites_experiments.sh  show_formula.py  validate_trajectories.py
service/: docker-compose.yml
src/: longshot.cpp
test/: Makefile  pytest.ini  test_agent_modules.py  test_arm_filter.py  test_arm_ranker.py  test_base64.py  test_circuit.cpp  test_circuit.py  test_clusterbomb.py  test_clusterbomb_agent.py  test_core.cpp  test_formula_graph_enhancements.py  test_formula_isodegrees.py  test_gym.py  test_integration_variable_tracking.py  test_pybind.py  test_trajectory_generator_fix.py  test_trajectory_processor.py  test_trajectory_queue.py  test_trajectory_utils.py  test_warehouse.py  testsuite.hpp
(+139 files in other folders)
